css/general.css
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; }

html {
	box-sizing: border-box;
}

*, *:before, *:after {
	box-sizing: inherit;
}

body {
    margin: 0;
    padding: 0;
    overflow: hidden;
}

.nav {
    margin: 0;
    padding: 0;
    list-style-type: none;
    background-color: white;
    display: none;
    text-transform: uppercase;
    font-family: 'Megrim', sans-serif;
}

.nav a {
    display: block;
    text-decoration: none;
    color: black;
    padding: 0.5em;
}

.nav a:hover {
    color: white;
    background-color: #B97922;
}

.nav-check {
    position: absolute;
    top: -3em;
}

.nav-check:checked ~ .nav {
    display: block;
}

.nav-label {
    cursor: pointer;
    font-size: 1.50rem;
    display: inline-block;
    width: 40px;
}

.nav-open,
.nav-close {
    display: block;
    width: 100%;
    margin: .5rem;
}

.nav-close {
    display: none;
}

.nav-check:checked ~ .nav-label .nav-open {
    display: none;
}

.nav-check:checked ~ .nav-label .nav-close {
    display: block;
}

.bannerimg {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-image: url(../images/banner.jpg);
    background-size: cover;
    background-position: center center;
   -webkit-animation: scale 5s ease-in-out infinite alternate;
    animation: scale 5s ease-in-out infinite alternate;
}

@-webkit-keyframes scale {
    
    0% {
        transform: scale(1,1);
    }
    
    100% {
        transform: scale(1.05,1.05);
    }
}

@keyframes scale {
    
    0% {
        transform: scale(1,1);
    }
    
    100% {
        transform: scale(1.05,1.05);
    }
    
}


.banner {
    width: 100%;
    position: relative;
    overflow: hidden;
    text-align: center;
}

.name {
    background-color: rgba(255, 255, 255, 0.4);
    text-align: center;
    overflow: hidden;
    padding: 5em 0 1em;
    margin: 3rem 0;
    line-height: 1;
    position: relative;
}

.logo {
    position: absolute;
    width: 10rem;
    top: 3rem;
    bottom: 3rem;
    left: calc(50% - 5rem);
    -webkit-animation: rotate 10s linear infinite;
    animation: rotate 10s linear infinite;
}

@-webkit-keyframes rotate {
        
    0% {
        transform: rotate(0deg)
    }
    
    100% {
        transform: rotate(360deg)
    }
}

@keyframes rotate {
        
    0% {
        transform: rotate(0deg)
    }
    
    100% {
        transform: rotate(360deg)
    }
    
}

.jesso {
    font-family: 'Megrim', sans-serif;
    text-transform: uppercase;
    font-size: 4rem;
    text-align: center;
    transition: all 0.5s ease;
}

.name:hover .jesso {
    color: white;
}
    
.leigh {
    font-family: 'Megrim', sans-serif;
    text-transform: uppercase;
    font-size: 4rem;
    text-align: center;
    transition: all 0.5s ease;
}

.name:hover .leigh {
    color: white;
}

@media only screen and (min-width: 25em) {
}

@media only screen and (min-width: 38em) {
    
    .jesso {
        float: left;
        font-size: 4.5rem;
    }

    .leigh {
        float: right;
        font-size: 4.5rem;
    }
    
    .logo {
        width: 13rem;
        top: 2rem;
        left: calc(50% - 6.5rem);
    }
    
    .name {
        background-color: rgba(255, 255, 255, 0.4);
        text-align: center;
        overflow: hidden;
        padding: 2em;
        margin: 0;
    }
}

@media only screen and (min-width: 60em) {
    
    .jesso {
        float: left;
        font-size: 6rem;
    }

    .leigh {
        float: right;
        font-size: 6rem;
    }
}

.tabs li {
    display: inline-block;
    text-align: center;
}

[hidden] {
    display: none;
}

.tab-name {
    text-decoration: none;
    font-family: 'Megrim', sans-serif;
    text-align: center;
    color: #B97922;
    font-size: 1.8rem;
    margin: .5em;
}

.tab-name:hover {
    background-color: black;
    color: white;
    padding: .5rem;
}

.artimgs {
    width: 11rem;
    border: 5px solid black;
    display: inline-block;
    margin: 0 auto;
}

.tab-panels {
    text-align: center;
}

